# snipvault

./: .gitignore  LICENSE  README.md  pyproject.toml
snipvault/: __init__.py  cli.py  clipboard.py  crypto.py  search.py  sharing.py  templates.py  vault.py
